[gd_scene load_steps=2 format=3 uid="uid://dey1drlfpoaf0"]

[ext_resource type="Script" path="res://Scripts/Factory.gd" id="1"]

[node name="Factory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StockLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Stock"

[node name="StationStatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Estaciones"

[node name="PlaceButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="FarmerStationButton" type="Button" parent="VBox/PlaceButtons"]
layout_mode = 2
text = "Colocar FarmerStation"

[node name="JuicerStationButton" type="Button" parent="VBox/PlaceButtons"]
layout_mode = 2
text = "Colocar JuicerStation"

[node name="MixerStationButton" type="Button" parent="VBox/PlaceButtons"]
layout_mode = 2
text = "Colocar MixerStation"

[node name="ExpandButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Ampliar grid"

[node name="Grid" type="GridContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="ManualButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AddSlimeButton" type="Button" parent="VBox/ManualButtons"]
layout_mode = 2
text = "+1 slime"

[node name="MakePulpButton" type="Button" parent="VBox/ManualButtons"]
layout_mode = 2
text = "2 slime -> 1 pulp"

[node name="MakeSmoothieButton" type="Button" parent="VBox/ManualButtons"]
layout_mode = 2
text = "2 pulp -> 1 smoothie"

[node name="SendBundleButton" type="Button" parent="VBox/ManualButtons"]
layout_mode = 2
text = "Enviar 1 de cada item"

[node name="CollectButtons" type="GridContainer" parent="VBox"]
layout_mode = 2
columns = 3

[node name="CollectSlimeButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Slime"

[node name="CollectPulpButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Pulpa"

[node name="CollectSmoothieButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Smoothie"

[node name="CollectAguaButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Agua"

[node name="CollectSalButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Sal"

[node name="CollectUnguentoButton" type="Button" parent="VBox/CollectButtons"]
layout_mode = 2
text = "Recoger Ungüento"

[node name="TransferButtons" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TransferSlimeButton" type="Button" parent="VBox/TransferButtons"]
layout_mode = 2
text = "Mover slime a tienda"

[node name="TransferPulpButton" type="Button" parent="VBox/TransferButtons"]
layout_mode = 2
text = "Mover pulp a tienda"

[node name="TransferSmoothieButton" type="Button" parent="VBox/TransferButtons"]
layout_mode = 2
text = "Mover smoothie a tienda"

[node name="TransferSalButton" type="Button" parent="VBox/TransferButtons"]
layout_mode = 2
text = "Mover sal a tienda"

[node name="TransferUnguentoButton" type="Button" parent="VBox/TransferButtons"]
layout_mode = 2
text = "Mover ungüento a tienda"

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Bloqueado"
